--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.2",
     "mongoose": "^5.0.9",
     "nodemon": "^1.17.1"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.7.3"
   }
 }
