--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "ng2-filter-pipe": "^0.1.10",
+    "ng2-search-filter": "^0.4.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
